# NAMI-RESEARCHER

./: MANIFEST.in  README.md  ingest.py  manage_rag.py  nami_cli.py  pyproject.toml  requirements.txt
knowledge/: chroma.sqlite3
src/: __init__.py  config.py  tools_module.py
src/agents/: __init__.py  core_agents.py  research_system.py  strategies.py  subagent_factory.py  subagent_registry.py  subagents.py  types.py
src/cli/: __init__.py  commands.py
src/mcps/: __init__.py  client.py  mcp_tools.py
src/mcps/arxiv-latex-mcp/: LICENSE  README.md  manifest.json  pyproject.toml
src/mcps/arxiv-latex-mcp/server/: main.py
src/prompts/: __init__.py  core_agent_prompts.py  prompt.py  prompt_builder.py  subagent_prompts.py
src/prompts/modules/: __init__.py  citations.py  output_formats.py  quality.py
src/rag/: rag_ingestion.py
src/states/: ResearchState.py
src/tools/: __init__.py  tool_sets.py
src/ui/: __init__.py  agent_activity.py  cli_branding.py  live_display.py  output_manager.py  progress_display.py  spinner.py
src/utils/: markdown_render.py  validation.py
