[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nami-research"
version = "1.0.0"
description = "ðŸ NAMI - Multi-Agent Research Intelligence System with 10 specialized strategies"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "NAMI Team", email = "nami@example.com"}
]
maintainers = [
    {name = "NAMI Team", email = "nami@example.com"}
]
keywords = [
    "research",
    "multi-agent",
    "ai",
    "llm",
    "langgraph",
    "langchain",
    "cli",
    "research-assistant",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "click>=8.0.0",
    "python-dotenv>=0.19.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-ollama>=0.1.0",
    "langgraph>=0.0.20",
    "pydantic>=2.0.0",
    "requests>=2.28.0",
    "tavily-python>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/nami-research"
Documentation = "https://github.com/yourusername/nami-research#readme"
Repository = "https://github.com/yourusername/nami-research"
Issues = "https://github.com/yourusername/nami-research/issues"

[project.scripts]
nami_research = "nami_cli:cli"

[tool.setuptools]
# Automatically discover all packages in src directory
packages.find.where = ["."]
packages.find.include = ["src*"]

# Include the src module and its subpackages
py-modules = ["nami_cli"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=term-missing --cov-report=html"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
